Bug 436382 - Resume all resumable downloads before retrying, even for failed/canceled downloads. r=sdwilsh